fixed spacing in tablet and desktop view

--- a/assets/css/responsive-style.css
+++ b/assets/css/responsive-style.css
@@ -2,7 +2,7 @@
 @media (min-width: 768px) {
 
     .me{
-        width: 30%;
+        width: 15%;
     }
 
     .details {
@@ -27,27 +27,19 @@
     }
 }
 
-/*-----------------DESKTOPS----------------*/
+/*-----------------DESKTOPS  (+ IPAD PRO)----------------*/
 @media (min-width: 992px) {
 
+    .me{
+        width: 20%;
+    }
+
     .francesca{
-        margin-top: 100px;
-        font-size: 100px;
+        margin-bottom: 20px;
     }
 
-    .secondtext {
-        font-size: 30px;
-    }
-
-    .homepic{
-        width: 200px;
-    }
-
-    .circles a {
-        width: 200px;
-        height: 200px;
-        line-height: 150px;
-        font-size: 20px;
+    .secondtext{
+        margin-bottom: 80px;
     }
 
     .hello{
@@ -69,10 +61,6 @@
     }
 
     .spacing{
-        margin-bottom: 50px;
-    }
-
-    .details{
         margin-bottom: 50px;
     }
 
@@ -103,5 +91,34 @@
 
 /*-----------------LARGER DESKTOPS----------------*/
 @media (min-width: 1200px) {
+
+    .francesca{
+        font-size: 60px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
+    .secondtext{
+        font-size: 15px;
+    }
+
+    .homepic{
+        width: 150px;
+        height: auto;
+        border-radius: 50%;
+        margin: auto;
+    }
+
+    .circles a{
+        display: inline;
+        margin: auto;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        font-size: 10px;
+        z-index: 30;
+        position: relative;
+        line-height: 50px;
+    }
 
 }
